// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterHeaderButton renders correctly with active filters 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "marginHorizontal": 16,
      },
      undefined,
    ]
  }
  testID="header-button"
>
  <Feather
    color="rgb(28, 28, 30)"
    name="filter"
    size={24}
  />
  <View
    style={
      {
        "backgroundColor": "red",
        "borderRadius": 4,
        "height": 8,
        "position": "absolute",
        "right": -4,
        "top": -4,
        "width": 8,
      }
    }
  />
</View>
`;

exports[`FilterHeaderButton renders correctly with no filters 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "marginHorizontal": 16,
      },
      undefined,
    ]
  }
  testID="header-button"
>
  <Feather
    color="rgb(28, 28, 30)"
    name="filter"
    size={24}
  />
</View>
`;
